rs/tests/failures/stable/missing_lifetime.stderr
error[E0106]: missing lifetime specifier
 --> tests/failures/stable/missing_lifetime.rs:3:27
  |
3 | fn f(x: &str, y: &str) -> &str {
  |         ----     ----     ^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `x` or `y`
help: consider introducing a named lifetime parameter
  |
3 | fn f<'a>(x: &'a str, y: &'a str) -> &'a str {
  |     ++++     ++          ++          ++
