rs/tests/failures/stable/missing_lifetime.rs
#![allow(unused_variables)]

fn f(x: &str, y: &str) -> &str {
    todo!()
}

fn main() {}
